--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
-.App {
-  text-align: center;
+#main {
+  height: 20%;
+  width: 20%;
+  margin-bottom: -3px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#alice {
+  /* position: absolute;
+  top: 200px;
+  left: 300px; */
+  height: 350px;
+  /* z-index: 2; */
+}
+#earth{
+  z-index: -10;
+}
+#images {
+  position: absolute;
+  top: 0;
+  left: 100px;
+  z-index: 2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+#tree {
+  height: 600px
+}
+
+#knight {
+  position: absolute;
+  top: -1100px;
+  left: 0px;
+  z-index: 10;
   }
+
+ #rook {
+  position: absolute;
+  top: -800px;
+  left: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#bush {
+  position: absolute;
+  top: 300px;
+  left: 0px;
+}
+#palm_small {
+  position: absolute;
+  top: 30px;
+  left: 650px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#pawn {
+  position: absolute;
+  top: 300px;
+  left: 650px;
 }
