--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,37 @@
 #main {
-  height: 20%;
-  width: 20%;
+  /* height: 30vh; */
+  width: 25%;
   margin-bottom: -3px;
 }
 
 #alice {
-  /* position: absolute;
-  top: 200px;
-  left: 300px; */
-  height: 350px;
-  /* z-index: 2; */
+  height: 80%;
+  position: absolute;
+  top: 400px; left: 40%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  width: 100%;
+  max-width: 450px; /*height: 783px / 2*/
+  z-index: 1;
 }
+
+/* #alice:before {
+    content: " ";
+    display: block;
+    padding-top: 87%;
+}
+
+#alice img {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;  
+} */
+
 #earth{
   z-index: -10;
+  width: 99vw;
+  height: 70vh;
+  overflow: hidden;
 }
 #images {
   position: absolute;
@@ -27,15 +46,15 @@
 
 #knight {
   position: absolute;
-  top: -1100px;
+  top: -600px;
   left: 0px;
   z-index: 10;
   }
 
  #rook {
   position: absolute;
-  top: -800px;
-  left: 0px;
+  top: -300px;
+  left: 100px;
 }
 
 #bush {
@@ -53,4 +72,22 @@
   position: absolute;
   top: 300px;
   left: 650px;
+}
+
+#rook_small{
+  position: absolute;
+  top: 300px;
+  left: 850px;
+}
+
+#pawn_small {
+  position: absolute;
+  top: 500px;
+  left: 0;
+}
+
+#buttons {
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
